deploy/logging/old/seq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq-deployment
  labels:
    app: seq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
        - name: seq
          image: datalust/seq:2022.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 5341
          resources:
            requests:
              memory: "256Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
          volumeMounts:
            - mountPath: /data
              name: seqdata
      volumes:
        - name: seqdata
          persistentVolumeClaim:
            claimName: seqdata-pv-claim
