deploy/logging/old/seq-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-ingress
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - seq.demo-beavergoose.nl
  #   secretName: seq-tls
  rules:
  # - host: seq.demo-beavergoose.nl
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: seq-service
  #           port:
  #             number: 80
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: seq-service
              port:
                number: 80
